# vulkan-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: build.sh
src/: main.cpp
